--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <div class="left_portion">
-           <span class="main_label">CONTACT ME </span>
+           <span class="main_label">GIVE FEEDBACK </span>
         </div>
 
         <div class="right_portion">
